--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,5 +43,6 @@ subjects:
 - !lcsh 'Science fiction, American'
 - !lcc 'PS'
 - !lcsh 'Space colonies -- Fiction'
+- GITenberg
 title: Adaptation
 url: http://www.gutenberg.org/ebooks/24749
